--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,34 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 @theme {
-  --color-cool-50: hsl(0 0% 23.8%);
-  --color-cool-100: hsl(0 0% 19.3%);
-  --color-cool-200: hsl(0 0% 11.6%);
-  --color-cool-800: hsl(0 0% 9%);
-  --color-cool-900: hsl(0 0% 6%);
+	--color-cool-50: hsl(0 0% 23.8%);
+	--color-cool-100: hsl(0 0% 19.3%);
+	--color-cool-200: hsl(0 0% 11.6%);
+	--color-cool-800: hsl(0 0% 9%);
+	--color-cool-900: hsl(0 0% 6%);
 
-  --transition-fast: 200ms;
-  --transition-visibility: transform ease-in-out, opacity ease-in-out;
+	--transition-fast: 200ms;
+	--transition-visibility: transform ease-in-out, opacity ease-in-out;
+}
+
+::highlight(select_title) {
+	@apply bg-blue-500;
+}
+
+input[type='search']::-webkit-search-cancel-button {
+	cursor: pointer;
+	-webkit-appearance: none;
+	height: 1.6rem;
+	width: 1.6rem;
+	background-size: contain;
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1.7rem' height='1.7rem' viewBox='0 0 24 24'%3E%3Cpath fill='gray' d='M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10s10-4.47 10-10S17.53 2 12 2m5 13.59L15.59 17L12 13.41L8.41 17L7 15.59L10.59 12L7 8.41L8.41 7L12 10.59L15.59 7L17 8.41L13.41 12z'/%3E%3C/svg%3E");
+	background-position: center;
 }
 
 html {
-  @apply touch-manipulation;
+	@apply touch-manipulation;
 }
 
 body {
-  @apply antialiased grid place-items-center bg-white text-black dark:bg-cool-900 dark:text-white font-sans;
+	@apply antialiased grid place-items-center bg-white text-black dark:bg-cool-900 dark:text-white font-sans;
 }
