--- a/src/index.css
+++ b/src/index.css
@@ -25,10 +25,30 @@ input[type='search']::-webkit-search-cancel-button {
 	background-position: center;
 }
 
+/* dialog::backdrop {
+	@apply transition-opacity duration-200;
+}
+
+dialog[open]::backdrop {
+	@apply opacity-55 bg-black;
+	@starting-style {
+		@apply opacity-100;
+	}
+} */
+
 html {
 	@apply touch-manipulation;
 }
 
 body {
-	@apply antialiased grid place-items-center bg-white text-black dark:bg-cool-900 dark:text-white font-sans;
+	@apply dark:bg-cool-900 grid place-items-center bg-white font-sans text-black antialiased dark:text-white;
+}
+
+html,
+body {
+	@apply min-h-full;
+}
+
+#root {
+	@apply w-full md:w-auto;
 }
