--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
 }
 
 ::highlight(select_title) {
-	@apply bg-blue-500;
+	@apply bg-orange-300 dark:bg-blue-500;
 }
 
 input[type='search']::-webkit-search-cancel-button {
@@ -24,17 +24,6 @@ input[type='search']::-webkit-search-cancel-button {
 	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1.7rem' height='1.7rem' viewBox='0 0 24 24'%3E%3Cpath fill='gray' d='M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10s10-4.47 10-10S17.53 2 12 2m5 13.59L15.59 17L12 13.41L8.41 17L7 15.59L10.59 12L7 8.41L8.41 7L12 10.59L15.59 7L17 8.41L13.41 12z'/%3E%3C/svg%3E");
 	background-position: center;
 }
-
-/* dialog::backdrop {
-	@apply transition-opacity duration-200;
-}
-
-dialog[open]::backdrop {
-	@apply opacity-55 bg-black;
-	@starting-style {
-		@apply opacity-100;
-	}
-} */
 
 html {
 	@apply touch-manipulation;
